# Twainsave

./: README.md
binaries/32-bit/: TwainSave_help.chm  dtwain32.ini  dtwain32u_hash.txt  twainave32_hash.txt  twaincustomresources_german.txt  twaincustomresources_greek.txt  twaincustomresources_portuguese_br.txt  twaincustomresources_russian.txt  twaincustomresources_simplified_chinese.txt  twaincustomresources_spanish.txt  twaincustomresources_traditional_chinese.txt  twainresourcestrings_mystrings.txt  twainsave.ini  twainsave32_hash.txt
binaries/64-bit/: TwainSave_help.chm  dtwain64.ini  dtwain64_hash.txt  dtwain64u_hash.txt  twaincustomresources_dutch.txt  twaincustomresources_english.txt  twaincustomresources_french.txt  twaincustomresources_italian.txt  twaincustomresources_japanese.txt  twaincustomresources_korean.txt  twaincustomresources_portuguese.txt  twaincustomresources_romanian.txt  twainsave64_hash.txt
help/: TwainSave (Open Source Version).chm  TwainSave_help.chm
source/: CMakeLists.txt  generate_details.cpp  resource.h  stdafx.cpp  twainsave-opensource.cpp  twainsave-opensource.sln  twainsave-opensource.vcxproj  twainsave-opensource.vcxproj.filters  twainsave-opernsource.rc  twainsave.h  twainsave.ini  twainsave_verinfo.h
source/c_cpp_includes/: dtwaindefs.h
source/cpp_wrapper_lib/: cpp_wrapper_lib.vcxproj  tojson.cpp  twain_session.cpp  twain_source.cpp
source/cpp_wrapper_lib/dynarithmic/twain/: twain_values.hpp
source/cpp_wrapper_lib/dynarithmic/twain/characteristics/: twain_select_dialog.hpp
source/cpp_wrapper_lib/dynarithmic/twain/session/: twain_characteristics.hpp  twain_session.hpp
source/dtwain_cpp/: dtwain_acquire_characteristics.cpp  dtwain_acquire_characteristics.ipp  dtwain_buffered_transfer.ipp  dtwain_buffered_transfer_info.cpp  dtwain_buffered_transfer_info.ipp  dtwain_capability_interface.cpp  dtwain_capability_interface.ipp  dtwain_capinterface.ipp  dtwain_cpp_interface.hpp  dtwain_duplex_info.cpp  dtwain_duplex_info.ipp  dtwain_feeder_info.cpp  dtwain_feeder_info.ipp  dtwain_file_transfer_info.cpp  dtwain_file_transfer_info.ipp  dtwain_filetype.ipp  dtwain_image_handler.cpp  dtwain_logger.ipp  dtwain_pdf_options.cpp  dtwain_pdf_options.ipp  dtwain_twain_array.cpp  dtwain_twain_array.ipp  dtwain_twain_capbasics.ipp  dtwain_twain_characteristics.ipp  dtwain_twain_dsm.ipp  dtwain_twain_filetype.ipp  dtwain_twain_identity.cpp  dtwain_twain_listener.ipp  dtwain_twain_logger.ipp  dtwain_twain_logger_details.ipp  dtwain_twain_printer.cpp  dtwain_twain_range.ipp  dtwain_twain_session.cpp  dtwain_twain_session.ipp  dtwain_twain_source.cpp  dtwain_twain_source.ipp  dtwain_twbasic.ipp  dtwain_twfix32.ipp  dtwain_twframe.ipp  dtwain_twidentity.ipp  (+6 more)
source/dynarithmic/twain/: acquire_characteristics.hpp  capability_interface.hpp  dtwain_twain.hpp  twain_session.hpp  twain_source.hpp  twain_values.hpp
source/dynarithmic/twain/acquire_characteristics/: acquire_characteristics.hpp
source/dynarithmic/twain/capability_interface/: capability_interface.hpp
source/dynarithmic/twain/characteristics/: twain_characteristics.hpp  twain_select_dialog.hpp
source/dynarithmic/twain/identity/: twain_identity.hpp
source/dynarithmic/twain/imagehandler/: image_handler.hpp
source/dynarithmic/twain/info/: buffered_transfer_info.hpp  paperhandling_info.hpp
source/dynarithmic/twain/logging/: error_logger.hpp  logger_callback.hpp  logger_characteristics.hpp  twain_logger.hpp
source/dynarithmic/twain/options/: audiblealarms_options.hpp  autoadjust_options.hpp  autocapture_options.hpp  autoscanning_options.hpp  barcodedetection_options.hpp  blankpage_options.hpp  buffered_transfer_options.hpp  capnegotiation_options.hpp  color_options.hpp  compression_options.hpp  deviceevents_options.hpp  deviceparams_options.hpp  doublefeed_options.hpp  file_transfer_options.hpp  general_options.hpp  imageinformation_options.hpp  imageparameter_options.hpp  imagetype_options.hpp  imprinter_options.hpp  jobcontrol_options.hpp  language_options.hpp  micr_options.hpp  options_base.hpp  pages_options.hpp  paperhandling_options.hpp  patchcode_options.hpp  pdf_options.hpp  powermonitor_options.hpp  resolution_options.hpp  ui_options.hpp
source/dynarithmic/twain/pdf/: text_element.hpp
source/dynarithmic/twain/session/: twain_session.hpp  twain_session_base.hpp
source/dynarithmic/twain/source/: twain_source.hpp  twain_source_base.hpp
source/dynarithmic/twain/types/: twain_array.hpp  twain_capbasics.hpp  twain_frame.hpp  twain_listener.hpp  twain_range.hpp  twain_timer.hpp  twain_types.hpp
source/text_resources/: dtwain64.ini  twaincustomresources_english.txt  twaininfo.txt
updates/: updates.txt
